# 3dUtils

./: .gitignore  c3utils-boost.txt
c3utils/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
c3utils/c3utils/: CInterface.cpp  CMakeLists.txt  Def.h  Funcs.h  PyInterface.cpp  Vector2.h  Vector3.h  c3utils.cpp  c3utils.h  test.cpp
i3utils/: i3utils.c  i3utils.pyx  setup.py  setup_foo.py.bac  test_py.py
releases/c3utils/c3utils-pb37-win_amd64/0.0_original/dll/: py_c3utils.pyd
releases/c3utils/c3utils-pb37-win_amd64/0.1/dll/: py_c3utils.pyd
releases/i3utils/: i3utils.cp37-win_amd64.pyd
